# calibrate-joystick

./: .gitmodules  .hgignore  .hgtags  ChangeLog  Makefile.am  NEWS  README  README.md  TODO.org  bootstrap  calibrate-joystick.desktop  calibrate-joystick.gresource.xml.in  calibrate-joystick.gschema.xml.in  calibrate-joystick.spec.in  com.github.dkosmari.CalibrateJoystick.desktop  com.github.dkosmari.CalibrateJoystickDaemon.desktop  configure.ac  none.calibrate_joystick-daemon.desktop  none.calibrate_joystick.desktop  resources.xml
.github/workflows/: build.yml  package-debian-13.yml  package-fedora-42.yml  package-mageia-9.yml
libgudevxx/: Makefile.am  bootstrap  configure.ac
libgudevxx/src/: Makefile.am  client.cpp  client.hpp  device.cpp  device.hpp  enumerator.cpp  enumerator.hpp  gobject_base.hpp  libgudevxx.la  utils.hpp
libgudevxx/utils/: Makefile.am  test-device-info.cpp  test-enumerator.cpp  test-listener.cpp
m4/: libtool.m4
po/: LINGUAS  Makevars  POTFILES.in  README  README.md  de.po  es.po  fr.po  it.po  pt.po  pt_BR.po  ru.po
src/: Makefile.am  app.cpp  app.hpp  axis_canvas.cpp  axis_canvas.hpp  axis_info.cpp  axis_info.hpp  colors.hpp  controller_db.cpp  controller_db.hpp  device_page.cpp  device_page.hpp  joystick_listener.cpp  joystick_listener.hpp  main.cpp  refresh_button.cpp  refresh_button.hpp  settings.cpp  settings.hpp  utils.cpp  utils.hpp
ui/: about-dialog.glade  actions.ui  application.glade  axis-info.glade  device-page.glade  main-window.glade
